Fix the mis-spelled "m_clienstWaitingForAsyncDecoding" https://bugs.webkit.org/show_bug.cgi?id=192060

Reviewed by Wenson Hsieh.

Fix the mis-spelling of "m_clienstWaitingForAsyncDecoding".

* loader/cache/CachedImage.cpp:
(WebCore::CachedImage::didRemoveClient):
(WebCore::CachedImage::isClientWaitingForAsyncDecoding const):
(WebCore::CachedImage::addClientWaitingForAsyncDecoding):
(WebCore::CachedImage::removeAllClientsWaitingForAsyncDecoding):
(WebCore::CachedImage::allClientsRemoved):
(WebCore::CachedImage::clear):
(WebCore::CachedImage::createImage):
(WebCore::CachedImage::imageFrameAvailable):
* loader/cache/CachedImage.h:


Canonical link: https://commits.webkit.org/206755@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@238600 268f45cc-cd09-0410-ab3c-d52691b4dbfc